# learn-workflow

./: .gitignore  LICENSE  README.md  bootstrap_manifest_env.sh  bsim_db_tool.py  build_bsim_db.sh  collect_baseline.py  dl-requirements.txt  gen-requirements.txt  gen_files.py  get_files.py  import_packaged_bsim.py  kbdex.py  package_collection.py  procmon_add.ipynb  pyproject.toml  run_decomp.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: archive-sync.yml  artifact-check.yml  image-curation.yml  index-refresh.yml  matrix-container.yml  package-smoke.yml  run-image.yml  windows-baseline-allowlist.yml  windows-baseline-bsim-smoke.yml  windows-baseline-dry-run.yml
allowlists/: windows-2022-core.txt  windows-2022-seed.txt
docs/: ARCHITECTURE.md  DESIGN.md  OPERATIONS.md
src/curation_harness/: __init__.py  bsim_db_tool.py  collect_baseline.py  gen_files.py  import_packaged_bsim.py  package_collection.py
tests/: test_collect_baseline.py  test_import_packaged_bsim.py  test_package_collection.py
tests/fixtures/: analysis.json
tests/fixtures/binaries/: alpha.dll.x64.10.0.20348.1  beta.dll.x86.10.0.20348.2
tests/fixtures/bsim/: sigs_1d9d4ff17a357813992cae6864e1c023_beta.dll.x86.10.0.20348.2  sigs_f4439ebdb98c08eed02291e5e38d0180_alpha.dll.x64.10.0.20348.1
tests/fixtures/meta/: dl_files0.json
